dilang-interpreter/test/cases/errors/defer_body_raises_swallowed.di
enum E { Boom }

fn noisy() {
    defer print("d1")
    defer raise Boom
    print("body")
}

fn main() {
    noisy()
    print("after")
}
